docs: update docs on features developed already
